tests/baselines/reference/tsxElementResolution6.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
file.tsx(8,1): error TS2339: Property 'div' does not exist on type 'JSX.IntrinsicElements'.


==== file.tsx (2 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements { }
    }
    
    var div: any;
    // Still an error
    <div n='x' />;
    ~~~~~~~~~~~~~
!!! error TS2339: Property 'div' does not exist on type 'JSX.IntrinsicElements'.
    